update: logo, portfolio img

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     <!-- Header -->
     <header>
       <nav>
-        <a class="logo link logo logo-web" href="./index.html">
-          Web
-          <span class="logo logo-studio-dark">Studio</span>
+        <a class="logo link logo logo-web" href="./index.html"
+          >Web<span class="logo logo-studio-dark">Studio</span>
         </a>
         <ul class="nav-ul list">
           <li>
@@ -176,9 +175,8 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <a class="logo link logo logo-web" href="./index.html">
-        Web
-        <span class="logo logo-studio-light">Studio</span>
+      <a class="logo link logo logo-web" href="./index.html"
+        >Web<span class="logo logo-studio-light">Studio</span>
       </a>
       <p class="footer-p">
         Increase the flow of customers and sales for your business with digital
