--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,8 @@
     <!-- Header -->
     <header>
       <nav>
-        <a class="logo link logo logo-web" href="./index.html">
-          Web
-          <span class="logo logo-studio-dark">Studio</span>
+        <a class="logo link logo logo-web" href="./index.html"
+          >Web<span class="logo logo-studio-dark">Studio</span>
         </a>
         <ul class="nav-ul list">
           <li>
@@ -69,7 +68,7 @@
           <li>
             <a class="link" href=""
               ><img
-                src="./images/portf-1.jpg"
+                src="./images/portf-01.jpg"
                 alt="Team member"
                 width="360"
                 height="300"
@@ -81,7 +80,7 @@
           <li>
             <a class="link" href=""
               ><img
-                src="./images/portf-2.jpg"
+                src="./images/portf-02.jpg"
                 alt="Team member"
                 width="360"
                 height="300"
@@ -93,7 +92,7 @@
           <li>
             <a class="link" href=""
               ><img
-                src="./images/portf-3.jpg"
+                src="./images/portf-03.jpg"
                 alt="Team member"
                 width="360"
                 height="300"
@@ -105,7 +104,7 @@
           <li>
             <a class="link" href=""
               ><img
-                src="./images/portf-4.jpg"
+                src="./images/portf-04.jpg"
                 alt="Team member"
                 width="360"
                 height="300"
@@ -117,7 +116,7 @@
           <li>
             <a class="link" href=""
               ><img
-                src="./images/portf-5.jpg"
+                src="./images/portf-05.jpg"
                 alt="Team member"
                 width="360"
                 height="300"
@@ -129,7 +128,7 @@
           <li>
             <a class="link" href=""
               ><img
-                src="./images/portf-6.jpg"
+                src="./images/portf-06.jpg"
                 alt="Team member"
                 width="360"
                 height="300"
@@ -141,7 +140,7 @@
           <li>
             <a class="link" href=""
               ><img
-                src="./images/portf-7.jpg"
+                src="./images/portf-07.jpg"
                 alt="Team member"
                 width="360"
                 height="300"
@@ -153,7 +152,7 @@
           <li>
             <a class="link" href=""
               ><img
-                src="./images/portf-8.jpg"
+                src="./images/portf-08.jpg"
                 alt="Team member"
                 width="360"
                 height="300"
@@ -165,7 +164,7 @@
           <li>
             <a class="link" href=""
               ><img
-                src="./images/portf-9.jpg"
+                src="./images/portf-09.jpg"
                 alt="Team member"
                 width="360"
                 height="300"
@@ -180,9 +179,8 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <a class="logo link logo logo-web" href="./index.html">
-        Web
-        <span class="logo logo-studio-light">Studio</span>
+      <a class="logo link logo logo-web" href="./index.html"
+        >Web<span class="logo logo-studio-light">Studio</span>
       </a>
       <p class="footer-p">
         Increase the flow of customers and sales for your business with digital
