--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <nav>
+    <header class="header container">
+      <nav class="header-nav">
         <a class="logo link logo logo-web" href="./index.html"
           >Web<span class="logo logo-studio-dark">Studio</span>
         </a>
@@ -41,7 +41,7 @@
         </ul>
       </nav>
       <address class="address">
-        <ul class="list">
+        <ul class="address-ul list">
           <li class="adress-li">
             <a class="adress-a link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -56,17 +56,17 @@
       </address>
     </header>
 
-    <main>
+    <main class="main">
       <!-- Section 1 - Hero -->
-      <section class="hero">
+      <section class="hero container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
 
       <!-- Section 2 - Properties -->
-      <section>
+      <section class="container">
         <h2 class="properties-header" hidden>Properties</h2>
-        <ul class="list">
+        <ul class="properties-ul list">
           <li>
             <h3 class="prop-header">Strategy</h3>
             <p class="properties-text">
@@ -99,9 +99,9 @@
       </section>
 
       <!-- Section 3 - Solutions -->
-      <section>
+      <section class="container">
         <h2 class="solution-header">What are we doing</h2>
-        <ul class="list">
+        <ul class="solution-ul list">
           <li>
             <img
               src="./images/solution-1.jpg"
@@ -130,9 +130,9 @@
       </section>
 
       <!-- Section 4 - Team -->
-      <section class="team">
+      <section class="team container">
         <h2 class="team-header">Our Team</h2>
-        <ul class="list">
+        <ul class="team-ul list">
           <li class="team-li">
             <img
               src="./images/team-1.jpg"
@@ -178,7 +178,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer container">
       <a class="logo link logo logo-web" href="./index.html"
         >Web<span class="logo logo-studio-light">Studio</span>
       </a>
