--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,8 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <nav>
+    <header class="header container">
+      <nav class="header-nav">
         <a class="logo link logo logo-web" href="./index.html"
           >Web<span class="logo logo-studio-dark">Studio</span>
         </a>
@@ -41,7 +41,7 @@
         </ul>
       </nav>
       <address class="address">
-        <ul class="list">
+        <ul class="address-ul list">
           <li class="adress-li">
             <a class="adress-a link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -58,9 +58,9 @@
 
     <main>
       <!-- Section - Navigation -->
-      <section>
+      <section class="container">
         <h1 hidden>Portfolio navigation</h1>
-        <ul class="list">
+        <ul class="portfolio-nav-ul list">
           <li><button class="nav-btn" type="button">All</button></li>
           <li><button class="nav-btn" type="button">Web Site</button></li>
           <li><button class="nav-btn" type="button">App</button></li>
@@ -68,7 +68,7 @@
           <li><button class="nav-btn" type="button">Marketing</button></li>
         </ul>
 
-        <ul class="list">
+        <ul class="portfolio-cards-ul list">
           <li>
             <a class="link" href=""
               ><img
@@ -78,7 +78,7 @@
                 height="300"
               />
               <h2 class="port-header">Banking App Interface Concept</h2>
-              <p class="properties-text">App</p>
+              <p class="port-text">App</p>
             </a>
           </li>
           <li>
@@ -90,7 +90,7 @@
                 height="300"
               />
               <h2 class="port-header">Cashless Payment</h2>
-              <p class="properties-text">Marketing</p>
+              <p class="port-text">Marketing</p>
             </a>
           </li>
           <li>
@@ -102,7 +102,7 @@
                 height="300"
               />
               <h2 class="port-header">Meditation App</h2>
-              <p class="properties-text">App</p>
+              <p class="port-text">App</p>
             </a>
           </li>
           <li>
@@ -114,7 +114,7 @@
                 height="300"
               />
               <h2 class="port-header">Taxi Service</h2>
-              <p class="properties-text">Marketing</p>
+              <p class="port-text">Marketing</p>
             </a>
           </li>
           <li>
@@ -126,7 +126,7 @@
                 height="300"
               />
               <h2 class="port-header">Screen Illustrations</h2>
-              <p class="properties-text">Design</p>
+              <p class="port-text">Design</p>
             </a>
           </li>
           <li>
@@ -138,7 +138,7 @@
                 height="300"
               />
               <h2 class="port-header">Online Courses</h2>
-              <p class="properties-text">Marketing</p>
+              <p class="port-text">Marketing</p>
             </a>
           </li>
           <li>
@@ -150,7 +150,7 @@
                 height="300"
               />
               <h2 class="port-header">Instagram Stories Concept</h2>
-              <p class="properties-text">Design</p>
+              <p class="port-text">Design</p>
             </a>
           </li>
           <li>
@@ -162,7 +162,7 @@
                 height="300"
               />
               <h2 class="port-header">Organic Food</h2>
-              <p class="properties-text">Web Site</p>
+              <p class="port-text">Web Site</p>
             </a>
           </li>
           <li>
@@ -174,7 +174,7 @@
                 height="300"
               />
               <h2 class="port-header">Fresh Coffee</h2>
-              <p class="properties-text">Web Site</p>
+              <p class="port-text">Web Site</p>
             </a>
           </li>
         </ul>
@@ -182,7 +182,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer container">
       <a class="logo link logo logo-web" href="./index.html"
         >Web<span class="logo logo-studio-light">Studio</span>
       </a>
