--- a/index.html
+++ b/index.html
@@ -19,48 +19,52 @@
     />
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="node_modules/modern-normalize/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
-    <header class="header container">
-      <nav class="header-nav">
-        <a class="logo link logo logo-web" href="./index.html"
-          >Web<span class="logo logo-studio-dark">Studio</span>
-        </a>
-        <ul class="nav-ul list">
-          <li>
-            <a class="site-nav-a link" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="site-nav-a link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="site-nav-a link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="address-ul list">
-          <li class="adress-li">
-            <a class="adress-a link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="adress-li">
-            <a class="adress-a link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container flex">
+        <nav class="header-nav">
+          <a class="logo link logo logo-web" href="./index.html"
+            >Web<span class="logo logo-studio-dark">Studio</span>
+          </a>
+          <ul class="nav-ul list">
+            <li>
+              <a class="site-nav-a link" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="site-nav-a link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li><a class="site-nav-a link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-ul list">
+            <li class="adress-li">
+              <a class="adress-a link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="adress-li">
+              <a class="adress-a link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main class="main">
       <!-- Section 1 - Hero -->
-      <section class="hero container">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+      <section class="sectionHero">
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
 
       <!-- Section 2 - Properties -->
@@ -77,9 +81,6 @@
           <li>
             <h3 class="prop-header">Punctuality</h3>
             <p class="properties-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
           </li>
           <li>
             <h3 class="prop-header">Diligence</h3>
@@ -96,96 +97,113 @@
             </p>
           </li>
         </ul>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Section 3 - Solutions -->
-      <section class="container">
-        <h2 class="solution-header">What are we doing</h2>
-        <ul class="solution-ul list">
-          <li>
-            <img
-              src="./images/solution-1.jpg"
-              alt="Case with desktop solution"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/solution-2.jpg"
-              alt="Case with mobile solution"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/solution-3.jpg"
-              alt="Case with mobile and desktop solution"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="solution-header">What are we doing</h2>
+          <ul class="solution-ul list">
+            <li class="solution-li">
+              <img
+                src="./images/solution-1.jpg"
+                alt="Case with desktop solution"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="solution-li">
+              <img
+                src="./images/solution-2.jpg"
+                alt="Case with mobile solution"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="solution-li">
+              <img
+                src="./images/solution-3.jpg"
+                alt="Case with mobile and desktop solution"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Section 4 - Team -->
-      <section class="team container">
-        <h2 class="team-header">Our Team</h2>
-        <ul class="team-ul list">
-          <li class="team-li">
-            <img
-              src="./images/team-1.jpg"
-              alt="Team member"
-              width="264"
-              height="260"
-            />
-            <h3 class="prop-header">Mark Guerrero</h3>
-            <p class="properties-text">Product Designer</p>
-          </li>
-          <li class="team-li">
-            <img
-              src="./images/team-2.jpg"
-              alt="Team member"
-              width="264"
-              height="260"
-            />
-            <h3 class="prop-header">Tom Ford</h3>
-            <p class="properties-text">Frontend Developer</p>
-          </li>
-          <li class="team-li">
-            <img
-              src="./images/team-3.jpg"
-              alt="Team member"
-              width="264"
-              height="260"
-            />
-            <h3 class="prop-header">Camila Garcia</h3>
-            <p class="properties-text">Marketing</p>
-          </li>
-          <li class="team-li">
-            <img
-              src="./images/team-4.jpg"
-              alt="Team member"
-              width="264"
-              height="260"
-            />
-            <h3 class="prop-header">Daniel Wilson</h3>
-            <p class="properties-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="sectionTeam">
+        <div class="container">
+          <h2 class="team-header">Our Team</h2>
+          <ul class="team-ul list">
+            <li class="team-li">
+              <img
+                src="./images/team-1.jpg"
+                alt="Team member"
+                width="264"
+                height="260"
+              />
+              <div class="team-div">
+                <h3 class="team-h">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-li">
+              <img
+                src="./images/team-2.jpg"
+                alt="Team member"
+                width="264"
+                height="260"
+              />
+              <div class="team-div">
+                <h3 class="team-h">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-li">
+              <img
+                src="./images/team-3.jpg"
+                alt="Team member"
+                width="264"
+                height="260"
+              />
+              <div class="team-div">
+                <h3 class="team-h">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-li">
+              <img
+                src="./images/team-4.jpg"
+                alt="Team member"
+                width="264"
+                height="260"
+              />
+              <div class="team-div">
+                <h3 class="team-h">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer -->
-    <footer class="footer container">
-      <a class="logo link logo logo-web" href="./index.html"
-        >Web<span class="logo logo-studio-light">Studio</span>
-      </a>
-      <p class="footer-p">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer">
+      <div class="container">
+        <a class="logo link logo logo-web footer-a" href="./index.html"
+          >Web<span class="logo logo-studio-light">Studio</span>
+        </a>
+        <p class="footer-p">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
