--- a/portfolio.html
+++ b/portfolio.html
@@ -19,177 +19,201 @@
     />
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="node_modules/modern-normalize/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
-    <header class="header container">
-      <nav class="header-nav">
-        <a class="logo link logo logo-web" href="./index.html"
-          >Web<span class="logo logo-studio-dark">Studio</span>
-        </a>
-        <ul class="nav-ul list">
-          <li>
-            <a class="site-nav-a link" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="site-nav-a link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="site-nav-a link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="address-ul list">
-          <li class="adress-li">
-            <a class="adress-a link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="adress-li">
-            <a class="adress-a link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container flex">
+        <nav class="header-nav">
+          <a class="logo link logo logo-web" href="./index.html"
+            >Web<span class="logo logo-studio-dark">Studio</span>
+          </a>
+          <ul class="nav-ul list">
+            <li class="card-li">
+              <a class="site-nav-a link" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="site-nav-a link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li><a class="site-nav-a link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-ul list">
+            <li class="adress-li">
+              <a class="adress-a link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="adress-li">
+              <a class="adress-a link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!-- Section - Navigation -->
-      <section class="container">
-        <h1 hidden>Portfolio navigation</h1>
-        <ul class="portfolio-nav-ul list">
-          <li><button class="nav-btn" type="button">All</button></li>
-          <li><button class="nav-btn" type="button">Web Site</button></li>
-          <li><button class="nav-btn" type="button">App</button></li>
-          <li><button class="nav-btn" type="button">Design</button></li>
-          <li><button class="nav-btn" type="button">Marketing</button></li>
-        </ul>
+      <section class="sectionPortfolio">
+        <div class="container">
+          <h1 hidden>Portfolio navigation</h1>
+          <ul class="portfolio-nav-ul list">
+            <li><button class="nav-btn" type="button">All</button></li>
+            <li><button class="nav-btn" type="button">Web Site</button></li>
+            <li><button class="nav-btn" type="button">App</button></li>
+            <li><button class="nav-btn" type="button">Design</button></li>
+            <li><button class="nav-btn" type="button">Marketing</button></li>
+          </ul>
 
-        <ul class="portfolio-cards-ul list">
-          <li>
-            <a class="link" href=""
-              ><img
-                src="./images/portf-01.jpg"
-                alt="Team member"
-                width="360"
-                height="300"
-              />
-              <h2 class="port-header">Banking App Interface Concept</h2>
-              <p class="port-text">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href=""
-              ><img
-                src="./images/portf-02.jpg"
-                alt="Team member"
-                width="360"
-                height="300"
-              />
-              <h2 class="port-header">Cashless Payment</h2>
-              <p class="port-text">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href=""
-              ><img
-                src="./images/portf-03.jpg"
-                alt="Team member"
-                width="360"
-                height="300"
-              />
-              <h2 class="port-header">Meditation App</h2>
-              <p class="port-text">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href=""
-              ><img
-                src="./images/portf-04.jpg"
-                alt="Team member"
-                width="360"
-                height="300"
-              />
-              <h2 class="port-header">Taxi Service</h2>
-              <p class="port-text">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href=""
-              ><img
-                src="./images/portf-05.jpg"
-                alt="Team member"
-                width="360"
-                height="300"
-              />
-              <h2 class="port-header">Screen Illustrations</h2>
-              <p class="port-text">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href=""
-              ><img
-                src="./images/portf-06.jpg"
-                alt="Team member"
-                width="360"
-                height="300"
-              />
-              <h2 class="port-header">Online Courses</h2>
-              <p class="port-text">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href=""
-              ><img
-                src="./images/portf-07.jpg"
-                alt="Team member"
-                width="360"
-                height="300"
-              />
-              <h2 class="port-header">Instagram Stories Concept</h2>
-              <p class="port-text">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href=""
-              ><img
-                src="./images/portf-08.jpg"
-                alt="Team member"
-                width="360"
-                height="300"
-              />
-              <h2 class="port-header">Organic Food</h2>
-              <p class="port-text">Web Site</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href=""
-              ><img
-                src="./images/portf-09.jpg"
-                alt="Team member"
-                width="360"
-                height="300"
-              />
-              <h2 class="port-header">Fresh Coffee</h2>
-              <p class="port-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+          <ul class="portfolio-cards-ul list">
+            <li class="card-li">
+              <a class="link" href="">
+                <img
+                  src="./images/portf-01.jpg"
+                  alt="Team member"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-div">
+                  <h2 class="port-header">Banking App Interface Concept</h2>
+                  <p class="port-text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-li">
+              <a class="link" href="">
+                <img
+                  src="./images/portf-02.jpg"
+                  alt="Team member"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-div">
+                  <h2 class="port-header">Cashless Payment</h2>
+                  <p class="port-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-li">
+              <a class="link" href="">
+                <img
+                  src="./images/portf-03.jpg"
+                  alt="Team member"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-div">
+                  <h2 class="port-header">Meditation App</h2>
+                  <p class="port-text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-li">
+              <a class="link" href="">
+                <img
+                  src="./images/portf-04.jpg"
+                  alt="Team member"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-div">
+                  <h2 class="port-header">Taxi Service</h2>
+                  <p class="port-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-li">
+              <a class="link" href="">
+                <img
+                  src="./images/portf-05.jpg"
+                  alt="Team member"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-div">
+                  <h2 class="port-header">Screen Illustrations</h2>
+                  <p class="port-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-li">
+              <a class="link" href="">
+                <img
+                  src="./images/portf-06.jpg"
+                  alt="Team member"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-div">
+                  <h2 class="port-header">Online Courses</h2>
+                  <p class="port-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-li">
+              <a class="link" href="">
+                <img
+                  src="./images/portf-07.jpg"
+                  alt="Team member"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-div">
+                  <h2 class="port-header">Instagram Stories Concept</h2>
+                  <p class="port-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-li">
+              <a class="link" href="">
+                <img
+                  src="./images/portf-08.jpg"
+                  alt="Team member"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-div">
+                  <h2 class="port-header">Organic Food</h2>
+                  <p class="port-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-li">
+              <a class="link" href="">
+                <img
+                  src="./images/portf-09.jpg"
+                  alt="Team member"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-div">
+                  <h2 class="port-header">Fresh Coffee</h2>
+                  <p class="port-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer -->
-    <footer class="footer container">
-      <a class="logo link logo logo-web" href="./index.html"
-        >Web<span class="logo logo-studio-light">Studio</span>
-      </a>
-      <p class="footer-p">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer">
+      <div class="container">
+        <a class="logo link logo logo-web footer-a" href="./index.html"
+          >Web<span class="logo logo-studio-light">Studio</span>
+        </a>
+        <p class="footer-p">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
