--- a/portfolio.html
+++ b/portfolio.html
@@ -26,19 +26,21 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <div class="container flex">
+      <div class="container flexSpaceBetween">
         <nav class="header-nav">
           <a class="logo link logo logo-web" href="./index.html"
             >Web<span class="logo logo-studio-dark">Studio</span>
           </a>
           <ul class="nav-ul list">
-            <li class="card-li">
+            <li class="nav-li">
               <a class="site-nav-a link" href="./index.html">Studio</a>
             </li>
-            <li>
+            <li class="nav-li">
               <a class="site-nav-a link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li><a class="site-nav-a link" href="">Contacts</a></li>
+            <li class="nav-li">
+              <a class="site-nav-a link" href="">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="address">
@@ -60,9 +62,9 @@
 
     <main>
       <!-- Section - Navigation -->
-      <section class="sectionPortfolio">
+      <section class="section-portfolio">
         <div class="container">
-          <h1 hidden>Portfolio navigation</h1>
+          <h1 class="visually-hidden">Portfolio navigation</h1>
           <ul class="portfolio-nav-ul list">
             <li><button class="nav-btn" type="button">All</button></li>
             <li><button class="nav-btn" type="button">Web Site</button></li>
