--- a/index.html
+++ b/index.html
@@ -26,19 +26,21 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <div class="container flex">
+      <div class="headerContainer">
         <nav class="header-nav">
           <a class="logo link logo logo-web" href="./index.html"
             >Web<span class="logo logo-studio-dark">Studio</span>
           </a>
           <ul class="nav-ul list">
-            <li>
+            <li class="nav-li">
               <a class="site-nav-a link" href="./index.html">Studio</a>
             </li>
-            <li>
+            <li class="nav-li">
               <a class="site-nav-a link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li><a class="site-nav-a link" href="">Contacts</a></li>
+            <li class="nav-li">
+              <a class="site-nav-a link" href="">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="address">
@@ -60,43 +62,42 @@
 
     <main class="main">
       <!-- Section 1 - Hero -->
-      <section class="sectionHero">
+      <section class="section-hero hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button">Order Service</button>
         </div>
       </section>
 
-      <!-- Section 2 - Properties -->
-      <section class="container">
-        <h2 class="properties-header" hidden>Properties</h2>
-        <ul class="properties-ul list">
-          <li>
-            <h3 class="prop-header">Strategy</h3>
-            <p class="properties-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="prop-header">Punctuality</h3>
-            <p class="properties-text">
-          </li>
-          <li>
-            <h3 class="prop-header">Diligence</h3>
-            <p class="properties-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="prop-header">Technologies</h3>
-            <p class="properties-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <!-- Section 2 - Properties -->↩
+      <section class="section-prop">
+        <div class="container">
+          <h2 class="properties-header visually-hidden" hidden>Properties</h2>
+          <ul class="properties-ul list">
+            <li class="prop-li">
+              <h3 class="prop-header">Strategy</h3>
+              <p class="properties-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="prop-li">
+              <h3 class="prop-header">Punctuality</h3>
+              <p class="properties-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="prop-li">
+              <h3 class="prop-header">Diligence</h3>
+              <p class="properties-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="prop-li">
+              <h3 class="prop-header">Technologies</h3>
+              <p class="properties-text">Design practice focused</p>
             </li>
           </ul>
         </div>
@@ -136,7 +137,7 @@
       </section>
 
       <!-- Section 4 - Team -->
-      <section class="sectionTeam">
+      <section class="section-team">
         <div class="container">
           <h2 class="team-header">Our Team</h2>
           <ul class="team-ul list">
