--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <div class="headerContainer">
+      <div class="flex container">
         <nav class="header-nav">
           <a class="logo link logo logo-web" href="./index.html"
             >Web<span class="logo logo-studio-dark">Studio</span>
@@ -97,7 +97,10 @@
             </li>
             <li class="prop-li">
               <h3 class="prop-header">Technologies</h3>
-              <p class="properties-text">Design practice focused</p>
+              <p class="properties-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
             </li>
           </ul>
         </div>
