--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <div class="container flexSpaceBetween">
+      <div class="flex container">
         <nav class="header-nav">
           <a class="logo link logo logo-web" href="./index.html"
             >Web<span class="logo logo-studio-dark">Studio</span>
