--- a/portfolio.html
+++ b/portfolio.html
@@ -45,13 +45,13 @@
         </nav>
         <address class="address">
           <ul class="address-ul list">
-            <li class="adress-li">
-              <a class="adress-a link" href="mailto:info@devstudio.com"
+            <li class="address-li">
+              <a class="address-a link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="adress-li">
-              <a class="adress-a link" href="tel:+110001111111"
+            <li class="address-li">
+              <a class="address-a link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
